--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -33,8 +33,11 @@
   transition: .3s;
   color: black;
   border-radius: 8px;
+  background-color: #3895d3;
 }
-
+.logoutBtn:hover {
+background-color: white;
+}
 .settings:hover{
   box-shadow: 0 11 11px black; 
 }
